--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,129 @@
-.App {
+body {
+  margin: 0;
+  background-color: #fefefe;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23ff6347' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+}
+
+#main_container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  font-family: Consolas, SFMono-Regular, Liberation Mono, Menlo, monospace;
+}
+
+#pdf_input_container {
+  height: max-content;
+  margin: 10px;
+  align-self: center;
+}
+
+#range_container {
+  display: inline-block;
+  height: max-content;
+  align-self: center;
+  margin: 10px;
+}
+
+#compress_pdf_container {
+  height: max-content;
+  align-self: center;
+  margin: 10px;
+}
+
+#compress_input_output {
+  display: inline-block;
+  width: 25px;
+  max-width: 25px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+#compress_pdf {
+  border: 1px solid rgba(255, 99, 71, 0.5);
+  background: rgba(255, 99, 71, 0.2);
+  padding: 5px;
+  outline: none;
+  animation: none;
+}
+
+#selected_pdf_container {
+  height: max-content;
+  margin: 10px;
+  align-self: center;
+}
+
+#pdf_input {
+  outline: none;
+  font-family: Consolas, SFMono-Regular, Liberation Mono, Menlo, monospace;
+}
+
+#pdf_input::-webkit-file-upload-button {
+  border-radius: 10px;
+  border: 1px solid rgba(255, 99, 71, 0.5);
+  outline: none;
+  background: rgba(255, 99, 71, 0.2);
+  font-family: Consolas, SFMono-Regular, Liberation Mono, Menlo, monospace;
+}
+
+#pdf_input::-webkit-file-upload-button:hover {
+  transform: translateY(-0.75px);
+}
+
+.handle {
+  cursor: grab;
+  content: url("res/ic_fluent_drag_24_regular.svg");
+  vertical-align: middle;
+}
+
+.list {
+  list-style: none;
+  width: max-content;
   text-align: center;
+  align-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.ghost-class {
+  background-color: rgba(255, 99, 71, 0.5);
+  border-radius: 5px;
+  width: max-content;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@keyframes loading {
+  0% {
+    border: 2px solid #4285f4;
+    color: #4285f4;
+    box-shadow: 0px 1px 10px 1px rgba(66, 133, 244, 0.5);
+  }
+
+  33% {
+    border: 2px solid #db4437;
+    color: #db4437;
+    box-shadow: 0px 1px 10px 1px rgba(219, 68, 55, 0.5);
+  }
+
+  66% {
+    border: 2px solid #f4b400;
+    color: #f4b400;
+    box-shadow: 0px 1px 10px 1px rgba(244, 160, 0, 0.5);
+  }
+
+  100% {
+    border: 2px solid #0f9d58;
+    color: #0f9d58;
+    box-shadow: 0px 1px 10px 1px rgba(15, 157, 88, 0.5);
   }
 }
 
+button {
+  border-radius: 15px;
+  font-family: Consolas, SFMono-Regular, Liberation Mono, Menlo, monospace;
+}
+
+button:disabled {
+  color: black;
+}
+
+button:hover {
+  box-shadow: 0px 1px 7px 1px rgba(255, 99, 71, 0.25);
+  transform: translateY(-0.75px);
+}
